src added canvas js cox WebGL

--- a/propagating-light-ray.html
+++ b/propagating-light-ray.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="propagating-light-ray.css">
 </head>
 <body>
+
+    <div id="line"></div>
     <div class="light"></div>
+    
 </body>
 </html>
